Update docker-compose configuration and environment variables; change API and web ports, and adjust package dependencies for React and date-fns.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
       context: .
       dockerfile: api/Dockerfile
     ports:
-      - "8000:8000"
+      - "8123:8000"
     restart: unless-stopped
 
   web:
@@ -12,15 +12,12 @@ services:
       context: .
       dockerfile: web/Dockerfile
     ports:
-      - "3000:3000"
-    volumes:
-      - ./web:/app/web
-      - web_node_modules:/app/web/node_modules
+      - "3123:3000"
+    environment:
+      - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-http://localhost:8123}
     depends_on:
       - api
     restart: unless-stopped
 
 volumes:
   web_node_modules:
-
-
