--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,9 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.539.0",
+    "@tailwindcss/postcss": "^4",
+    "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.6",
     "next": "15.4.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -32,14 +35,12 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "typescript": "^5.6.3",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
-    "tailwindcss": "^4",
-    "tw-animate-css": "^1.3.6",
     "typescript": "^5"
   }
 }
