--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -8,6 +8,11 @@ RUN npm ci --omit=dev || npm ci || npm install --omit=dev
 FROM node:20-alpine AS builder
 WORKDIR /app/web
 ENV NEXT_TELEMETRY_DISABLED=1
+# Accept build-time overrides for API origins so Next.js can bake them during `next build`
+ARG NEXT_PUBLIC_API_URL
+ARG API_INTERNAL_ORIGIN
+ENV NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
+ENV API_INTERNAL_ORIGIN=${API_INTERNAL_ORIGIN}
 COPY --from=deps /app/web/node_modules ./node_modules
 COPY web .
 RUN npm run build
@@ -18,6 +23,11 @@ ENV NODE_ENV=production \
     NEXT_TELEMETRY_DISABLED=1 \
     PORT=3000 \
     HOSTNAME=0.0.0.0
+# Keep envs available at runtime as well (not strictly required for Next, but useful for tooling)
+ARG NEXT_PUBLIC_API_URL
+ARG API_INTERNAL_ORIGIN
+ENV NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
+ENV API_INTERNAL_ORIGIN=${API_INTERNAL_ORIGIN}
 COPY --from=builder /app/web/.next ./.next
 COPY --from=builder /app/web/public ./public
 COPY --from=builder /app/web/package.json ./package.json
