completly redesign dashboard and fix api items

--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -9,6 +9,8 @@ dependencies = [
     "fastapi>=0.115.0",
     "yfinance>=0.2.52",
     "uvicorn[standard]",
+    "aiohttp>=3.12.15",
+    "tqdm>=4.67.1",
 ]
 
 [project.scripts]
