--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,9 @@ services:
       - "7949:3000"
     environment:
       - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-http://api:8000}
+      - API_INTERNAL_ORIGIN=${API_INTERNAL_ORIGIN:-http://api:8000}
+      - SESSION_SECRET=${SESSION_SECRET:-change_this_to_a_random_string_at_least_32_characters_long}
+      - NODE_ENV=production
     depends_on:
       - api
     restart: unless-stopped
