--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "iron-session": "^8.0.3",
     "lucide-react": "^0.539.0",
     "@tailwindcss/postcss": "^4",
     "tailwindcss": "^4",
